--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Popup</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="./script.js"></script>
   </head>
   <body>
     <header>
