chore: 🤖 Add popup tips

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -22,5 +22,6 @@
       id="webhookTokenInput"
       placeholder="请输入钉钉群聊机器人 access_token"
     />
+    <span class="tips">👋 不填写时会默认发送至插件内测群聊</span>
   </body>
 </html>
